need to fix alignment in main-content section

--- a/great-idea-website/css/index.css
+++ b/great-idea-website/css/index.css
@@ -71,26 +71,31 @@ header {
 	border: 1px solid green;
 }
 header nav {
-	display: inline-block;
+	display: inline;
 }
 header nav a {
 	color: gray;
 	font-size: 11px;
-	margin: 5px 50px;
+	margin: 5px 40px;
 
+}
+
+header img {
+	margin-left: 20px;
 }
 
 img {
-	display: inline-block;
+	display: inline;
 }
 section {
-	display: inline-block;
+	display: inline;
 }
 
 .container {
 	border: 5px solid purple;
 	width: 55%;
 	margin: 0 auto;
+	padding: 20px;
 	position: relative;
 }
 
@@ -114,9 +119,12 @@ section {
 
 }
 
+.main-content .two-column {
+	width: 100%;
+}
 
 .top-section h1{
-	font-size: 65px;
+	font-size: 80px;
 	border: 1px solid gray;
 	display: inline-block;
 	margin-top: 80px;
@@ -130,7 +138,7 @@ section {
 	border: 1px solid black;
 	display: inline-block;
 	position: absolute;
-	right: 60px;
+	right: 40px;
 }
 
 .top-section button {
@@ -145,7 +153,39 @@ section {
 	border: 1px solid black;
 }
 
-.main-content section {
-	width: 40%;
+.two-column section {
+	width: 48%;
 	display: inline-block;
+	margin: 10px 0;
+	border: 1px solid purple;
+}
+
+.left {
+	text-align: left;
+	margin-right: 10px;
+}
+
+.right {
+	text-align: left;
+	right: 0px;
+	margin-left: 80px;
+}
+
+
+
+.three-column section {
+	width: 26%;
+	display: inline-block;
+	border: 1px solid green;
+	margin: 0px auto;
+}
+
+footer p {
+	margin-top: 10px;
+}
+footer p:last-of-type {
+	text-align: center;
+	font-size: 10px;
+	border: 1px solid black;
+	color: rgb(156, 156, 156);
 }
